vault/templates/svc-vault-internal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    vault-internal: "true"
  name: vault-internal
spec:
  ports:
  - name: http
    port: 8200
  - name: https-internal
    port: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
