vault/templates/mwh-vault-agent-injector-cfg.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vault-agent-injector-cfg
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNSekNDQWU2Z0F3SUJBZ0lVYXhmVVVSVWNXck5iQ2ZxWGFqOEU5alVDM1FRd0NnWUlLb1pJemowRUF3SXcKR2pFWU1CWUdBMVVFQXhNUFFXZGxiblFnU1c1cVpXTjBJRU5CTUI0WERUSXpNREV5TnpBd01EUXhNMW9YRFRNegpNREV5TkRBd01EVXhNMW93R2pFWU1CWUdBMVVFQXhNUFFXZGxiblFnU1c1cVpXTjBJRU5CTUZrd0V3WUhLb1pJCnpqMENBUVlJS29aSXpqMERBUWNEUWdBRTFmaFlWT3FBSmg3M0hudjllcXhaOS8wS09NMzFxbTVxL2l4NCtiM1EKMHFyK25jdjdSWFlYc3g1UXFkQVp3Tkpzb0NlSUs2UmdkQytNZ2JTN2dvV3AvcU9DQVJBd2dnRU1NQTRHQTFVZApEd0VCL3dRRUF3SU [...]
    service:
      name: vault-agent-injector-svc
      namespace: vault
      path: /mutate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Exact
  name: vault.hashicorp.com
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - vault-agent-injector
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
